--- a/register-office/pom.xml
+++ b/register-office/pom.xml
@@ -42,6 +42,14 @@
             <version>42.2.5</version>
         </dependency>
 
+        <dependency>
+            <groupId>org.projectlombok</groupId>
+            <artifactId>lombok</artifactId>
+            <version>1.18.26</version>
+            <scope>provided</scope>
+        </dependency>
+
+
     </dependencies>
 
 </project>
