--- a/register-office/pom.xml
+++ b/register-office/pom.xml
@@ -11,8 +11,7 @@
     <properties>
         <spring.version>6.0.7</spring.version>
         <slf4j.version>1.7.28</slf4j.version>
-    </properties>>
-
+    </properties>
 
     <build>
         <plugins>
