--- a/register-office/pom.xml
+++ b/register-office/pom.xml
@@ -11,6 +11,7 @@
     <properties>
         <hibernate.version>5.6.9.Final</hibernate.version>
         <spring.version>5.3.2</spring.version>
+        <spring-data.version>3.0.4</spring-data.version>
         <slf4j.version>1.7.28</slf4j.version>
     </properties>
 
@@ -68,6 +69,12 @@
             <groupId>org.springframework</groupId>
             <artifactId>spring-orm</artifactId>
             <version>${spring.version}</version>
+        </dependency>
+
+        <dependency>
+            <groupId>org.springframework.data</groupId>
+            <artifactId>spring-data-jpa</artifactId>
+            <version>${spring-data.version}</version>
         </dependency>
 
         <dependency>
