--- a/register-office/pom.xml
+++ b/register-office/pom.xml
@@ -9,9 +9,9 @@
     <version>1.0-SNAPSHOT</version>
 
     <properties>
-        <hibernate.version>5.6.9.Final</hibernate.version>
-        <spring.version>5.3.2</spring.version>
-        <spring-data.version>3.0.4</spring-data.version>
+        <hibernate.version>5.4.3.Final</hibernate.version>
+        <spring.version>5.1.9.RELEASE</spring.version>
+        <spring-data.version>2.2.1.RELEASE</spring-data.version>
         <slf4j.version>1.7.28</slf4j.version>
     </properties>
 
@@ -20,6 +20,7 @@
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-compiler-plugin</artifactId>
+                <version>3.10.1</version>
                 <configuration>
                     <source>8</source>
                     <target>8</target>
